--- a/CommissionsModule/Views/Decisions/CommissionDecisionView.xaml
+++ b/CommissionsModule/Views/Decisions/CommissionDecisionView.xaml
@@ -5,13 +5,13 @@
                     xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf">
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     <DataTemplate DataType="{x:Type viewModels:CommissionDecisionViewModel}" >
-        <Grid>
+        <Grid HorizontalAlignment="Stretch">
             <Border Background="{Binding ColorType}" HorizontalAlignment="Stretch">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
@@ -22,6 +22,17 @@
                     <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding MemberName}" FontWeight="Bold"/>
 
                     <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Decision}"/>
+
+                    <StackPanel Grid.Row="0" Grid.RowSpan="2" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button Background="Transparent" BorderThickness="0" VerticalAlignment="Center" Command="{Binding ElementName=AvailableMembersContainer, Path=DataContext.RemoveCurrentMemberCommand}" CommandParameter="{Binding}"
+                                Visibility="{Binding CanDeleteMember, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+                            <Button.ContentTemplate>
+                                <DataTemplate>
+                                    <Image Source="pack://application:,,,/Core;Component/Resources/Images/Remove48x48.png" Height="24" Width="24"/>
+                                </DataTemplate>
+                            </Button.ContentTemplate>
+                        </Button>
+                    </StackPanel>
                 </Grid>
             </Border>
 
