--- a/CommissionsModule/Views/Protocols/EditorCommissionMembersView.xaml
+++ b/CommissionsModule/Views/Protocols/EditorCommissionMembersView.xaml
@@ -2,15 +2,100 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:viewModels="clr-namespace:CommissionsModule.ViewModels"
-             xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf">
-    <DataTemplate DataType="{x:Type viewModels:EditorCommissionMembersViewModel}" >
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="?" 
-                   FontSize="48"
-                   HorizontalAlignment="Center"/>
-            <TextBlock Text="Состав комиссии" />
+             xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
+             xmlns:viewModels="clr-namespace:CommissionsModule.ViewModels">
+    
+    <DataTemplate DataType="{x:Type viewModels:EditorCommissionMembersViewModel}">
+        <StackPanel Orientation="Vertical" Width="800">
+            <ToolBar OverflowMode="Never">
+                <Button Command="{Binding AddMemberCommand, Mode=OneTime}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Width="16"
+                               Height="16"
+                               Source="pack://application:,,,/Core;Component/Resources/Images/Add48x48.png"
+                               Stretch="Uniform"
+                               Margin="2"
+                               VerticalAlignment="Center" />
+                        <TextBlock Margin="2" VerticalAlignment="Center" Text="Добавить" />
+                    </StackPanel>
+                </Button>                
+                <ComboBox HorizontalAlignment="Stretch" Margin="5,2,25,2" 
+                      SelectedValuePath="Value" 
+                      DisplayMemberPath="Field" 
+                      SelectedValue="{Binding SelectedCommissionTypeId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                      ItemsSource="{Binding CommissionsTypes}"
+                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}" />
+            </ToolBar>
+            
+            <Grid>
+                <ListBox MinHeight="150"
+                         MaxHeight="300"
+                         ItemsSource="{Binding Members}"
+                         Margin="5"
+                         Grid.IsSharedSizeScope="True"
+                         HorizontalContentAlignment="Stretch"
+                         HorizontalAlignment="Stretch">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate DataType="{x:Type viewModels:CommissionMemberViewModel}">
+                            <Grid Background="White"
+                                  x:Name="Grid">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition SharedSizeGroup="MemberTypes" Width="Auto" />
+                                    <ColumnDefinition SharedSizeGroup="PersonStaffs" Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition SharedSizeGroup="Staffs" Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <Button Margin="2"
+                                        Padding="2"
+                                        Command="{Binding DataContext.RemoveMemberCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}, Mode=OneTime}"
+                                        CommandParameter="{Binding Mode=OneTime}"
+                                        Opacity="0.5"
+                                        x:Name="Button"
+                                        ToolTip="Убрать члена комиссии">
+                                    <Image Width="12"
+                                           Height="12"
+                                           Source="pack://application:,,,/Core;Component/Resources/Images/Remove48x48.png"
+                                           Stretch="Uniform"
+                                           Margin="2"
+                                           VerticalAlignment="Center" />
+                                </Button>
+
+                                <ComboBox HorizontalAlignment="Stretch" Margin="5,2,25,2" Grid.Row="0" Grid.Column="1" 
+                                          SelectedValuePath="Value" 
+                                          DisplayMemberPath="Field" 
+                                          SelectedValue="{Binding SelectedMemberTypeId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                                          ItemsSource="{Binding MemberTypes}"
+                                          Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" />
+
+                                <ComboBox HorizontalAlignment="Stretch" Margin="5,2,25,2" Grid.Row="0" Grid.Column="2" 
+                                          SelectedValuePath="Value" 
+                                          DisplayMemberPath="Field" 
+                                          SelectedValue="{Binding SelectedPersonStaffId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                                          ItemsSource="{Binding PersonStaffs}"
+                                          IsEnabled="{Binding CanSelectPersonStaff}"
+                                          Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" />
+
+                                <TextBlock Grid.Row="0" Grid.Column="3" Text="или" Margin="0 2 20 2" FontStyle="Italic"/>
+                                
+                                <ComboBox HorizontalAlignment="Stretch" Margin="5,2,25,2" Grid.Row="0" Grid.Column="4" 
+                                          SelectedValuePath="Value" 
+                                          DisplayMemberPath="Field" 
+                                          SelectedValue="{Binding SelectedStaffId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                                          ItemsSource="{Binding Staffs}"
+                                          IsEnabled="{Binding CanSelectStaff}"
+                                          Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" />
+
+                            </Grid>
+                            <DataTemplate.Triggers>
+                                <Trigger SourceName="Grid" Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="Button" Property="Opacity" Value="1.0" />
+                                </Trigger>
+                            </DataTemplate.Triggers>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
         </StackPanel>
     </DataTemplate>
 </ResourceDictionary>
