--- a/CommissionsModule/Views/Protocols/EditorCommissionMembersView.xaml
+++ b/CommissionsModule/Views/Protocols/EditorCommissionMembersView.xaml
@@ -9,7 +9,7 @@
     <DataTemplate DataType="{x:Type viewModels:EditorCommissionMembersViewModel}">
         <StackPanel Orientation="Vertical" Width="900">
             <ToolBar OverflowMode="Never">
-                <Button Command="{Binding AddMemberCommand, Mode=OneTime}">
+                <Button Command="{Binding AddMemberCommand, Mode=OneTime}" IsEnabled="{Binding CanAddMember}">
                     <StackPanel Orientation="Horizontal">
                         <Image Width="16"
                                Height="16"
@@ -58,6 +58,7 @@
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition SharedSizeGroup="BeginDateTime" Width="Auto" />
                                     <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition SharedSizeGroup="EndDateTime" Width="Auto" />
                                 </Grid.ColumnDefinitions>
                                 <Button Margin="2"
                                         Padding="2"
@@ -74,14 +75,14 @@
                                            VerticalAlignment="Center" />
                                 </Button>
 
-                                <ComboBox HorizontalAlignment="Stretch" Margin="5,2,25,2" Grid.Row="0" Grid.Column="1" 
+                                <ComboBox HorizontalAlignment="Stretch" Margin="2,2,25,2" Grid.Row="0" Grid.Column="1" 
                                           SelectedValuePath="Value" 
                                           DisplayMemberPath="Field" 
                                           SelectedValue="{Binding SelectedMemberTypeId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                                           ItemsSource="{Binding MemberTypes}"
                                           Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" />
 
-                                <ComboBox HorizontalAlignment="Stretch" Margin="5,2,25,2" Grid.Row="0" Grid.Column="2" 
+                                <ComboBox HorizontalAlignment="Stretch" Margin="2,2,25,2" Grid.Row="0" Grid.Column="2" 
                                           SelectedValuePath="Value" 
                                           DisplayMemberPath="Field" 
                                           SelectedValue="{Binding SelectedPersonStaffId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
@@ -89,9 +90,9 @@
                                           IsEnabled="{Binding CanSelectPersonStaff}"
                                           Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" />
 
-                                <TextBlock Grid.Row="0" Grid.Column="3" Text="или" Margin="0 2 20 2" FontStyle="Italic"/>
+                                <TextBlock Grid.Row="0" Grid.Column="3" Text="или" Margin="0 2" FontStyle="Italic"/>
                                 
-                                <ComboBox HorizontalAlignment="Stretch" Margin="5,2,25,2" Grid.Row="0" Grid.Column="4" 
+                                <ComboBox HorizontalAlignment="Stretch" Margin="25,2" Grid.Row="0" Grid.Column="4" 
                                           SelectedValuePath="Value" 
                                           DisplayMemberPath="Field" 
                                           SelectedValue="{Binding SelectedStaffId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
@@ -99,11 +100,13 @@
                                           IsEnabled="{Binding CanSelectStaff}"
                                           Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" />
                                 
-                                <TextBlock Grid.Row="0" Grid.Column="5" Text="действует до" Margin="0 2 20 2" FontStyle="Italic"/>
+                                <TextBlock Grid.Row="0" Grid.Column="5" Text="действует с " Margin="0 2" FontStyle="Italic"/>
 
                                 <toolkit:DateTimePicker Grid.Row="0" Grid.Column="6" Margin="5 2" Watermark="Дата" Format="LongDate" Value="{Binding BeginDateTime}"/>
 
-                                <TextBlock Grid.Row="0" Grid.Column="7" Text="{Binding EndDateTime}" Margin="0 2" FontStyle="Italic"/>
+                                <TextBlock Grid.Row="0" Grid.Column="7" Text=" до " Margin="0 2" FontStyle="Italic"/>
+
+                                <toolkit:DateTimePicker Grid.Row="0" Grid.Column="8" Margin="5 2" Watermark="Дата" Format="LongDate" Value="{Binding EndDateTime}"/>
 
                             </Grid>
                             <DataTemplate.Triggers>
