--- a/CommissionsModule/Views/Protocols/CommissionСonductView.xaml
+++ b/CommissionsModule/Views/Protocols/CommissionСonductView.xaml
@@ -2,7 +2,8 @@
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:viewModels="clr-namespace:CommissionsModule.ViewModels"
-                    xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf">
+                    xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
+                    xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase">
 
     <DataTemplate DataType="{x:Type viewModels:CommissionСonductViewModel}" >
 
@@ -12,6 +13,9 @@
                     <CollectionViewSource.GroupDescriptions>
                         <PropertyGroupDescription PropertyName="CommissionMemberGroupItem" />
                     </CollectionViewSource.GroupDescriptions>
+                    <CollectionViewSource.SortDescriptions>
+                        <scm:SortDescription PropertyName="Stage" Direction="Ascending"/>
+                    </CollectionViewSource.SortDescriptions>
                 </CollectionViewSource>
             </Grid.Resources>
             <Grid x:Name="AvailableMembersContainer">
@@ -70,7 +74,8 @@
                                                                         <TextBlock Text="Выполнить после следующего этапа"/>
                                                                     </Button.ToolTip>
                                                                 </Button>
-                                                                <Button Background="Transparent" BorderThickness="0" Command="{Binding ElementName=DecissionsList, Path=DataContext.RemoveStageCommand}" CommandParameter="{Binding Name}">
+                                                                <Button Name="btnRemoveStage" Background="Transparent" BorderThickness="0" Command="{Binding ElementName=DecissionsList, Path=DataContext.RemoveStageCommand}" CommandParameter="{Binding Name}"
+                                                                        Visibility="{Binding ElementName=btnRemoveStage, Path=IsEnabled, Converter={x:Static converters:BoolToInvisibilityConverter.Instance}}">
                                                                     <Button.ContentTemplate>
                                                                         <DataTemplate>
                                                                             <Image Source="pack://application:,,,/Core;Component/Resources/Images/Remove48x48.png" Height="20" Width="20"/>
