--- a/OrganizationContracts/Views/OrgContractsView.xaml
+++ b/OrganizationContracts/Views/OrgContractsView.xaml
@@ -9,6 +9,7 @@
              xmlns:views="clr-namespace:OrganizationContractsModule.Views"
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
              xmlns:coremisc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
+             xmlns:controls="clr-namespace:Core.Wpf.Controls;assembly=Core.Wpf"
              mc:Ignorable="d"
              d:DesignHeight="500"
              d:DesignWidth="800" d:DataContext="{d:DesignInstance viewModels:OrgContractsViewModel}">
@@ -26,6 +27,15 @@
             <converters:ConverterItem From="{x:Static coremisc:StaticBoolean.False}"
                                           To="{x:Static Visibility.Visible}" />
         </converters:Converter>
+        <converters:Converter x:Key="IsDMS" DefaultValue="{x:Static Visibility.Collapsed}">
+            <converters:ConverterItem From="{x:Static coremisc:StaticBoolean.True}"
+                                          To="{x:Static Visibility.Visible}" />
+            <converters:ConverterItem From="{x:Static coremisc:StaticBoolean.False}"
+                                          To="{x:Static Visibility.Collapsed}" />
+        </converters:Converter>
+        <DataTemplate x:Key="ClientsAutoCompleteTemplate">
+            <TextBlock Text="{Binding Path=Field}" Margin="5" FontWeight="Bold" />
+        </DataTemplate>
     </UserControl.Resources>
        
     <Grid>
@@ -69,8 +79,8 @@
                                 </Style>
                             </GridView.ColumnHeaderContainerStyle>
                             <GridView.Columns>
-                                <GridViewColumn x:Name="ContractNumber" Width="75" Header="№ договора" DisplayMemberBinding="{Binding Path=ContractNumber}"></GridViewColumn>
-                                <GridViewColumn x:Name="OrganizationName" Width="300" Header="Организация" DisplayMemberBinding="{Binding Path=ContractName}"></GridViewColumn>
+                                <GridViewColumn x:Name="ContractFinSource" Width="75" Header="Ист. фин." DisplayMemberBinding="{Binding Path=ContractFinSource}"></GridViewColumn>
+                                <GridViewColumn x:Name="OrganizationName" Width="300" Header="Договор" DisplayMemberBinding="{Binding Path=ContractName}"></GridViewColumn>
                             </GridView.Columns>
                         </GridView>
                     </ListView.View>
@@ -107,6 +117,8 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
 
                         <Label Grid.Row="0" Grid.Column="0" Content="" />
@@ -129,14 +141,32 @@
                               SelectedValuePath="Value"
                               SelectedValue="{Binding SelectedOrganizationId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                                             Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" Margin="2,2,25,2"/>
-                        <TextBlock Grid.Row="3" Grid.Column="0" Text="Начало действия договора" />
-                        <TextBlock Grid.Row="4" Grid.Column="0" Text="Конец действия договора" />
-                        <DatePicker Grid.Row="3" Grid.Column="1" 
+                        <TextBlock Grid.Row="3" Grid.Column="0" Visibility="{Binding IsDMSContract, Converter={StaticResource IsDMS}}">
+                            <Run Text="Пациент" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
+                        <controls:AutoCompleteTextBox Name="autocomplete" Grid.Row="3" 
+                                                Grid.Column="1" 
+                                                Margin="2,2,25,2" 
+                                                Background="White" MinHeight="23"
+                                                SuggestionsProvider="{Binding PersonSuggestionsProvider}"
+                                                DisplayMemberPath="Field"
+                                                SelectedItem="{Binding SelectedPatient, Mode=TwoWay, ValidatesOnDataErrors=True}"
+                                                Watermark="Введите Ф.И.О. пациента для поиска..."
+                                                Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" 
+                                                ItemTemplate="{StaticResource ClientsAutoCompleteTemplate}"
+                                                Visibility="{Binding IsDMSContract, Converter={StaticResource IsDMS}}"/>
+                        
+                        <TextBlock Grid.Row="4" Grid.Column="0" Text="Период действия договора" />
+                        <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal">
+                            <DatePicker Grid.Row="3" Grid.Column="1" 
                                 SelectedDate="{Binding ContractBeginDate, Mode=TwoWay}" 
                                 Width="115" Margin="2,2,25,2" HorizontalAlignment="Left"/>
-                        <DatePicker Grid.Row="4" Grid.Column="1" 
+                            <TextBlock Text="-"/>
+                            <DatePicker Grid.Row="4" Grid.Column="1" 
                                 SelectedDate="{Binding ContractEndDate, Mode=TwoWay}" 
-                                Width="115" Margin="2,2,25,2" HorizontalAlignment="Left"/>
+                                Width="115" Margin="25,2" HorizontalAlignment="Left"/>
+                        </StackPanel>                        
                         <TextBlock Grid.Row="5" Grid.Column="0">
                             <Run Text="Сумма по договору, руб. (0 - безлимит)" />
                             <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
@@ -145,21 +175,51 @@
                                     Minimum="0" Increment="1" 
                                     ParsingNumberStyle="Integer" TextAlignment="Left"
                                     Value="{Binding ContractCost}" Margin="2,2,25,2" />
-                        <TextBlock Grid.Row="6" Grid.Column="0" Text="Доп. информация" />
-                        <xctk:WatermarkTextBox Grid.Row="6" Grid.Column="1"  Margin="5,2,25,2" MinHeight="50"
-                               Watermark="укажите адрес как в документе..."
+                        
+                        <TextBlock Grid.Row="6" Grid.Column="0" Text="Перечень услуг" />
+                        <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal">
+                            <Button Command="{Binding AddRecordCommand}" Margin="2 0 25 0" Background="Transparent" BorderBrush="Transparent" BorderThickness="0">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Width="20" Height="20" Source="pack://application:,,,/Core;Component/Resources/Images/Add48x48.png" />
+                                    <TextBlock Text="Добавить услугу"/>
+                                </StackPanel>
+                            </Button>
+                            <Button Command="{Binding RemoveRecordCommand}" Background="Transparent" BorderBrush="Transparent" BorderThickness="0">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Width="20" Height="20" Source="pack://application:,,,/Core;Component/Resources/Images/Remove48x48.png" />
+                                    <TextBlock Text="Удалить услугу"/>
+                                </StackPanel>
+                            </Button>
+                        </StackPanel>
+
+                        <ListBox Grid.Row="7" Grid.Column="1"
+                            ItemsSource="{Binding Records}" 
+                            SelectedItem="{Binding SelectedRecord, Mode=TwoWay}"
+                            ScrollViewer.VerticalScrollBarVisibility="Auto"
+                            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                            MinHeight="200" Margin="2 2 25 2">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Name}" Margin="5,0" HorizontalAlignment="Stretch"/>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+
+                        <TextBlock Grid.Row="8" Grid.Column="0" Text="Доп. информация" />
+                        <xctk:WatermarkTextBox Grid.Row="8" Grid.Column="1"  Margin="2,2,25,2" MinHeight="50"
                                TextWrapping="Wrap" AcceptsReturn="True" VerticalContentAlignment="Center"
                                Text="{Binding OrgDetails, UpdateSourceTrigger=PropertyChanged}"/>
                         
-                        <TextBlock Grid.Row="7" Grid.Column="0">
+                        <TextBlock Grid.Row="9" Grid.Column="0">
                             <Run Text="Ответственный" />
                             <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
                         </TextBlock>
-                        <ComboBox Grid.Row="7" Grid.Column="1" ItemsSource="{Binding Registrators}" 
+                        <ComboBox Grid.Row="9" Grid.Column="1" ItemsSource="{Binding Registrators}" 
                               DisplayMemberPath="Field" 
                               SelectedValuePath="Value"
                               SelectedValue="{Binding SelectedRegistratorId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                                             Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" Margin="2,2,25,2"/>
+
                     </Grid>                    
                 </Grid>
             </Border>
