--- a/CommissionsModule/Views/ListCommissions/CommissionsListView.xaml
+++ b/CommissionsModule/Views/ListCommissions/CommissionsListView.xaml
@@ -20,7 +20,7 @@
         </Grid.RowDefinitions>
         
         <DockPanel Grid.Column="0" Grid.Row="0" HorizontalAlignment="Stretch">
-            <ComboBox DockPanel.Dock="Top" Width="200" Margin="2"
+            <ComboBox DockPanel.Dock="Top" Margin="2"
                           ItemsSource="{Binding Filters}" 
                           SelectedValue="{Binding SelectedFilter, Mode=TwoWay}"
                           SelectedValuePath="Value" 
